--- a/surgeprotector.html
+++ b/surgeprotector.html
@@ -76,8 +76,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="row mb-5">
                 <div class="col-md-8 col-xl-6 text-center mx-auto">
                     <h3 class="fw-bold" style="font-family: Inter, sans-serif;font-size: 56px;">Whole Home Surge Protection</h3>
-                    <p class="text-muted"> With Surge Protection you can protect your applicances, devices and all your technology while enjoying a seamless flow of electricity throughout your property.<br>
-                    Whole home surge protectors also protect you from high costs associated with replacing electronics damaged by surges, which are rarely covered by insurance.</p>
+                    <p class="text-muted"> Whole Home Surge Protection Protects your Applicances, Devices and all Your Technology.<br> Enjoy a Seamless Flow of Electricity Throughout Your Property.<br>
                 </div>
             </div>
             <div class="row g-0 row-cols-1 row-cols-md-2 row-cols-xl-3 d-flex align-items-md-center align-items-xl-center" style="background: url(&quot;assets/img/AdobeStock_392762194.jpeg&quot;);height: 879.531px;background-size: cover;">
@@ -93,11 +92,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             </div>
                             <div>
                                 <ul style="font-size: 12px;" class="list-unstyled">
-                                    <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon bs-icon-xs me-2"></span><span class="font-size: 12px;"><span>Protect Your Sensitive Electronic Equipment from Lightning Strikes. More Extreme Weather Leads to More Electrical Disruption.Prepare Your Home Against Rising Risks. </span></li>
-                                    <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon bs-icon-xs me-2"></span><span style="font-size: 12px;">Protection Up to $75,000 Worth of your Valuable Equipment with a Five-Year Warranty.</span></li>
-                                    <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon bs-icon-xs me-2"></span><span>Whole Home Surge Protectors Are a One-Time Investment for Long-Term Savings.</span></li>
-                                    <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon bs-icon-xs me-2"></span><span>Ultimate Safegaurd- Because Your Technology Deserves it!</span></li>
-                                    <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon bs-icon-xs me-2"></span><span>A Single Whole-Home Surge Protector Protects ALL Devices Connected to the Home's Electrical System. </span></li>                                <ul>
+                                    <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon bs-icon-xs me-2"></span><span class="font-size: 12px;"><span>Protect Your Sensitive Electronic Equipment from Lightning Strikes.</span></li>
+                                    <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon bs-icon-xs me-2"></span><span style="font-size: 12px;">Protection Up to $75,000 Worth with a Five-Year Warranty.</span></li>
+                                    <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon bs-icon-xs me-2"></span><span> A One-Time Investment for Long-Term Savings.</span></li>
+                                    <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon bs-icon-xs me-2"></span><span>Ultimate Safegaurd-Because Your Technology Deserves it!</span></li>
+                                    <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon bs-icon-xs me-2"></span><span>Protects ALL Devices Connected to the Home's Electrical System. </span></li>                                <ul>
                             </div>
                             <a href="contacts.html">
                                 <button class="btn btn-primary d-block w-100" type="button">
