--- a/surgeprotector.html
+++ b/surgeprotector.html
@@ -75,8 +75,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container py-5">
             <div class="row mb-5">
                 <div class="col-md-8 col-xl-6 text-center mx-auto">
-                    <h3 class="fw-bold" style="font-family: Inter, sans-serif;font-size: 56px;">Whole Home Surge Protection</h3>
-                    <p class="text-muted"> Whole Home Surge Protection Protects your Applicances, Devices and all Your Technology.<br> Enjoy a Seamless Flow of Electricity Throughout Your Property.<br>
+                    <h3 class="fw-bold" style="font-family: Inter, sans-serif;font-size: 56px;">Whole Home<br>Surge Protection</h3>
+                    <p class="text-muted"> Protect Your Applicances, Devices and all Your Technology.<br> Enjoy a Seamless Flow of Electricity Throughout Your Property.<br>
                 </div>
             </div>
             <div class="row g-0 row-cols-1 row-cols-md-2 row-cols-xl-3 d-flex align-items-md-center align-items-xl-center" style="background: url(&quot;assets/img/AdobeStock_392762194.jpeg&quot;);height: 879.531px;background-size: cover;">
