--- a/surgeprotector.html
+++ b/surgeprotector.html
@@ -98,7 +98,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                     <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon bs-icon-xs me-2"></span><span>Ultimate Safegaurd-Because Your Technology Deserves it!</span></li>
                                     <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon bs-icon-xs me-2"></span><span>Protects ALL Devices Connected to the Home's Electrical System. </span></li>                                <ul>
                             </div>
-                            <a href="contacts.html">
+                                        
+                            <a style="padding: 20px;" href="contacts.html">
                                 <button class="btn btn-primary d-block w-100" type="button">
                                     Get started today.
                                 </button>
