breaks added in long paragraph

--- a/surgeprotector.html
+++ b/surgeprotector.html
@@ -123,7 +123,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                     <li class="d-flex mb-2"></li>
                                     <li class="d-flex mb-2">
                                         <span style="background: url(&quot;https://cdn.bootstrapstudio.io/placeholders/1400x800.png&quot;);color: var(--bs-emphasis-color);">
-                                          Protect your home and electronics with our whole-home surge protectors. Power surges from lightning, grid issues, or everyday fluctuations can cause costly damage to appliances, smart home systems, and other devices. Unlike plug-in surge strips, our solutions protect your entire electrical system, preventing wear and tear while ensuring uninterrupted power. With extreme weather on the rise, investing in a surge protector offers peace of mind, financial savings, and long-term reliability. Safegaurd your home today with a trusted comprehensive solution.
+                                          Protect your home and electronics with our whole-home surge protectors. Power surges from lightning, grid issues, or everyday fluctuations can cause costly damage to appliances, smart home systems, and other devices. <br> Unlike plug-in surge strips, our solutions protect your entire electrical system, preventing wear and tear while ensuring uninterrupted power.<br>With extreme weather on the rise, investing in a surge protector offers peace of mind, financial savings, and long-term reliability. Safegaurd your home today with a trusted comprehensive solution.
                                         </span>
                                     </li>
                                 </ul>
