--- a/surgeprotector.html
+++ b/surgeprotector.html
@@ -87,7 +87,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <div>
                                     <h3 style="font-size: 40px;"class="fw-bold mb-0">Whole Home Surge Protection</h3>
                                     <p>Starting at</p>
-                                    <h4 class="display-4 fw-bold">$549<span style="vertical-align: top; font-size: 14px;">*</span></h4>
+                                    <h4 class="display-4 fw-bold">$549<span style="vertical-align: top; font-size: 14px;"></span></h4>
                                 </div>
                             </div>
                             <div>
