Update services.html link to generlink

--- a/services.html
+++ b/services.html
@@ -257,7 +257,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <div class="col-12">
                             <p class="product-description">Be prepared for any power outage with our reliable stand-by generator solutions. Ensure your home or business has a dependable backup power source that automatically kicks in when the lights go out. Stay powered and protected, no matter the weather or circumstance.</p>
                             <div class="row">
-                                <div class="col-6"><a href="contacts.html"><button class="btn btn-light" type="button">Learn More</button></a></div>
+                                <div class="col-6"><a href="generlink.html"><button class="btn btn-light" type="button">Learn More</button></a></div>
                             </div>
                         </div>
                     </div>
