--- a/generlink.html
+++ b/generlink.html
@@ -76,7 +76,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="container py-4 py-xl-5">
         <div class="row mb-5">
             <div class="col-md-8 col-xl-6 text-center mx-auto">
-                <h2 style="font-size: 40.44px;">Generator Transfer Switch Solutions with GenerLink™/h2>
+               <h2 style="font-size: 40.44px;">Generator Transfer Switch Solutions with GenerLink™</h2>
             </div>
         </div>
         <div class="carousel slide" data-bs-ride="carousel" id="carousel-1" style="height: 600px;">
