--- a/generlink.html
+++ b/generlink.html
@@ -87,7 +87,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <div class="col-md-6 col-xl-4 offset-md-2" style="margin-top: -196px;">
                                 <div style="max-width: 350px;">
                                     <h1 class="text-uppercase fw-bold">Effortless Backup Power with GenerLink™/h1>
-                                    <p class="my-3" style="font-weight: bold;">Seamlessly connect your generator to your home’s power with GenerLink™—your ultimate solution for uninterrupted energy./p>
+                                    <p class="my-3" style="font-weight: bold;">Seamlessly connect your generator to your home’s power with GenerLink™/p>
                                     <p class="my-3" style="background: rgba(255,255,255,0.5);color: var(--bs-blue);font-weight: bold;font-size: 25px;"></p>
                                 </div>
                             </div>
