--- a/generlink.html
+++ b/generlink.html
@@ -13,7 +13,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Hot Tubs, Pools &amp; Sauna</title>
     <meta name="" content="">
-    <meta name="description" content="Relax and unwind in style with our flawless hot tub installation services, bringing ultimate indulgence to your home. Full electrical installation and customizable solutions for your hot tub, pool and sauna systems.">
+    <meta name="description" content="Relax and unwind in style with our flawless hot tub installation services, bringing ultimate indulgence to your home.">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/ABeeZee.css">
     <link rel="stylesheet" href="assets/css/Aclonica.css">
