--- a/generlink.html
+++ b/generlink.html
@@ -136,8 +136,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <div>
                                 <h3 class="fw-bold mb-0" style="color: rgb(32,102,208);">GenerLink™ Generator Transfer Switch & Install </h3>
                                 <p style="color: rgb(32,102,208);"></p> 
-                                <h4 class="display-6 fw-bold text-white" style="height: 39px;font-size: 21px;"></h4>
-                                <h4 class="display-6 fw-bold text-white" style="margin-top: -31px;margin-left: 16px;padding-top: 0px;padding-bottom: 0px;margin-bottom: 0px;">&nbsp;$1799 </h4><i class="la la-star" style="font-size: 11px;margin-top: -12px;"></i><span style="font-size: 10px;padding-top: 10px;margin-top: -4px;margin-bottom: -21px;">Starting at</span>
+                                <h4 class="display-6 fw-bold text-blue" style="height: 39px;font-size: 21px;"></h4>
+                                <h4 class="display-6 fw-bold text-blue" style="margin-top: -31px;margin-left: 16px;padding-top: 0px;padding-bottom: 0px;margin-bottom: 0px;">&nbsp;$1799 </h4><i class="la la-star" style="font-size: 11px;margin-top: -12px;"></i><span style="font-size: 10px;padding-top: 10px;margin-top: -4px;margin-bottom: -21px;">Starting at</span>
                             </div>
 
                         </div>
