--- a/generlink.html
+++ b/generlink.html
@@ -99,7 +99,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <div class="row">
                             <div class="col-md-6 col-xl-4 offset-md-2">
                                 <div style="max-width: 350px;margin-top: -237px;">
-                                    <h1 class="text-uppercase fw-bold">Seamlessly connect your generator to your home’s power with GenerLink™/h1>
+                                    <h1 class="text-uppercase fw-bold">Seamlessly connect your generator to your home’s power with GenerLink™</h1>
                                     
                                 </div>
                             </div>
