--- a/generlink.html
+++ b/generlink.html
@@ -94,7 +94,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </div>
                     </div>
                 </div>
-                <div class="carousel-item h-100"><img class="w-100 d-block position-absolute h-100 fit-cover" src="assets/img/generlink_Home.jpeg
+                <div class="carousel-item h-100"><img class="w-100 d-block position-absolute h-100 fit-cover" src="assets/img/generlink_Home
 " alt="Slide Image" style="z-index: -1;">
                     <div class="container d-flex flex-column justify-content-center h-100">
                         <div class="row">
