--- a/generlink.html
+++ b/generlink.html
@@ -86,7 +86,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <div class="row">
                             <div class="col-md-6 col-xl-4 offset-md-2" style="margin-top: -196px;">
                                 <div style="max-width: 350px;">
-                                 <h1 class="text-uppercase fw-bold" style="color: blue;" >Effortless Backup Power with GenerLink™</h1>
+                                 <h1 class="text-uppercase fw-bold" style="color: blue;background-color: white; padding: 10px;" >Effortless Backup Power with GenerLink™</h1>
 
 
                                     
