--- a/generlink.html
+++ b/generlink.html
@@ -120,7 +120,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </div>
                         <div class="col-md-6 col-xl-4 offset-md-2">
                             <div style="max-width: 350px;">
-                                <h1 class="text-uppercase fw-bold" ">Quick, Safe, Professional Installation</h1>
+                              
+<h1 class="text-uppercase fw-bold" style="color: blue; background-color: white;">Quick, Safe, Professional Installation</h1>
+
+
+
+                                
                                 <p class="my-3" style="font-weight: bold;">Our experts will have your GenerLink™ transfer switch installed and ready in no time, giving you peace of mind.</p>
                             </div>
                         </div>
