--- a/generlink.html
+++ b/generlink.html
@@ -194,47 +194,68 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
         </div>
     </div>
+    <div style="padding: 10px;">
     <footer class="bg-dark" style="font-family: Inter, sans-serif;">
         <div class="container py-4 py-lg-5">
             <div class="row justify-content-center">
-                <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
+                <!-- Services Section -->
+                <div class="col-sm-6 col-md-4 text-center text-lg-start d-flex flex-column">
                     <h3 class="fs-6 fw-bold">Services</h3>
-                    <ul class="list-unstyled">
-                        <li><a href="panelupgrade.html">Panel Upgrades</a><a href="services.html" style="margin-left: 13px;">&nbsp;Surge Protection</a></li>
-                        <li><a href="electricalrepairs.html">Electrical Repair &amp; Installation</a></li>
-                        <li><a href="homeautomation.html">Home Automation Systems</a></li>
-                        <li><a href="ev.html">Car Charger</a><a href="ev.html" style="padding-left: 0px;margin-left: 15px;">EV's</a></li>
-                        <li></li>
-                        <li></li>
-                        <li><a href="hottubs.html">Hot Tubs, Sauna &amp;</a><a href="hottubs.html" style="padding-left: 0px;margin-left: 5px;">Pool Installation</a></li>
-                        <li><a href="services.html">Home Inspection</a><a href="services.html" style="margin-left: 14px;">Panel Labelling</a></li>
-                    </ul>
+                    <div class="row">
+                        <!-- First Subcolumn -->
+                        <div class="col-6">
+                            <ul class="list-unstyled">
+                                <li><a href="panelupgrade.html">Panel Upgrades</a></li>
+                                <li><a href="services.html">Surge Protection</a></li>
+                                <li><a href="electricalrepairs.html">Electrical Repair &amp; Installation</a></li>
+                                <li><a href="homeautomation.html">Home Automation Systems</a></li>
+                                <li><a href="ev.html">Car Charger</a></li>
+                            </ul>
+                        </div>
+                        <!-- Second Subcolumn -->
+                        <div class="col-6">
+                            <ul class="list-unstyled">
+                                <li><a href="ev.html">EV's</a></li>
+                                <li><a href="hottubs.html">Hot Tubs, Sauna</a></li>
+                                <li><a href="hottubs.html">Pool Installation</a></li>
+                                <li><a href="services.html">Home Inspection</a></li>
+                                <li><a href="services.html">Panel Labelling</a></li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
+
+                <!-- About Section -->
+                <div class="col-sm-6 col-md-3 text-center text-lg-start d-flex flex-column">
                     <h3 class="fs-6 fw-bold">About</h3>
                     <ul class="list-unstyled">
                         <li><a href="about.html">Company</a></li>
                         <li><a href="gallery.html">Gallery</a></li>
                         <li><a href="https://esasafe.com">Licensed &amp; Insured</a></li>
-                        <li></li>
                     </ul>
                 </div>
-                <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
+
+                <!-- Contact Us Section -->
+                <div class="col-sm-6 col-md-3 text-center text-lg-start d-flex flex-column">
                     <h3 class="fs-6 fw-bold">Contact Us</h3>
                     <ul class="list-unstyled">
                         <li><a href="contacts.html">Book an Estimate</a></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
                     </ul>
                 </div>
+
+                <!-- Brand Section -->
                 <div class="col-lg-3 text-center text-lg-start d-flex flex-column align-items-center order-first align-items-lg-start order-lg-last">
-                    <div class="fw-bold d-flex align-items-center mb-2"><span class="bs-icon-sm bs-icon-circle bs-icon-primary d-flex justify-content-center align-items-center bs-icon me-2"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-bezier">
+                    <div class="fw-bold d-flex align-items-center mb-2">
+                        <span class="bs-icon-sm bs-icon-circle bs-icon-primary d-flex justify-content-center align-items-center bs-icon me-2">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-bezier">
                                 <path fill-rule="evenodd" d="M0 10.5A1.5 1.5 0 0 1 1.5 9h1A1.5 1.5 0 0 1 4 10.5v1A1.5 1.5 0 0 1 2.5 13h-1A1.5 1.5 0 0 1 0 11.5v-1zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1zm10.5.5A1.5 1.5 0 0 1 13.5 9h1a1.5 1.5 0 0 1 1.5 1.5v1a1.5 1.5 0 0 1-1.5 1.5h-1a1.5 1.5 0 0 1-1.5-1.5v-1zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1zM6 4.5A1.5 1.5 0 0 1 7.5 3h1A1.5 1.5 0 0 1 10 4.5v1A1.5 1.5 0 0 1 8.5 7h-1A1.5 1.5 0 0 1 6 5.5v-1zM7.5 4a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1z"></path>
                                 <path d="M6 4.5H1.866a1 1 0 1 0 0 1h2.668A6.517 6.517 0 0 0 1.814 9H2.5c.123 0 .244.015.358.043a5.517 5.517 0 0 1 3.185-3.185A1.503 1.503 0 0 1 6 5.5v-1zm3.957 1.358A1.5 1.5 0 0 0 10 5.5v-1h4.134a1 1 0 1 1 0 1h-2.668a6.517 6.517 0 0 1 2.72 3.5H13.5c-.123 0-.243.015-.358.043a5.517 5.517 0 0 0-3.185-3.185z"></path>
-                            </svg></span><a href="index.html"><span>Leonard Electric</span>
+                            </svg>
+                        </span>
+                        <a href="index.html"><span>Leonard Electric</span>
                             <p class="text-muted" style="font-size: 13px;">Turning Power into Perfection.</p>
-                        </a></div>
+                        </a>
+                    </div>
                 </div>
             </div>
             <hr>
@@ -243,6 +264,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
         </div>
     </footer>
+</div>
+            
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/Animated-Pretty-Product-List-v12-Animated-Pretty-Product-List.js"></script>
     <script src="assets/js/bold-and-dark.js"></script>
