--- a/generlink.html
+++ b/generlink.html
@@ -162,10 +162,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                         </svg></span><span style="color: rgb(32,102,208);">Seamless Integration: Easily connects your generator to your home’s electrical system without rewiring.</span></li>
                                 <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon me-2"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-check-lg">
                                             <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z"></path>
-                                        </svg></span><span>Safety First: Eliminates dangerous backfeeding and protects utility workers from accidental power surges.</span></li>
-                                <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon me-2"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-check-lg">
-                                            <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z"></path>
-                                        </svg></span><span>Convenient Operation: Plug in your generator directly.</span></li>
+                                        </svg></span><span>Safety First: Eliminates dangerous backfeeding and protects utility workers from accidental power surges.</span></li
         
                             </ul>
                         </div><a href="contacts.html"><a class="btn btn-primary d-block w-100" role="button" href="#">Get Started</a></a>
