--- a/generlink.html
+++ b/generlink.html
@@ -197,7 +197,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
   
     <footer class="bg-dark text-white" style="font-family: Inter, sans-serif;">
-        <div class="container py-12 py-lg-12">
+        <div class="container-fluid py-12 py-lg-12">
             <div class="row justify-content-center w-100">
                 <!-- Services Section -->
                 <div class="col-10 col-lg-3 mx-auto text-center text-lg-start d-flex flex-column">
