col-sm-4 col-md-3

--- a/generlink.html
+++ b/generlink.html
@@ -197,10 +197,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
   
     <footer class="bg-dark text-white" style="font-family: Inter, sans-serif;">
-        <div class="container-fluid py-12 py-lg-12">
-            <div class="row justify-content-center w-100">
+        <div class="py-12 py-lg-12">
+            <div class="row justify-content-center">
                 <!-- Services Section -->
-                <div class="col-10 col-lg-3 mx-auto text-center text-lg-start d-flex flex-column">
+                <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
                     <h3 class="fs-6 fw-bold">Services</h3>
                     <ul class="list-unstyled">
                         <li><a href="panelupgrade.html" class="text-white">Panel Upgrades</a><a href="services.html" style="margin-left: 13px;">Surge Protection</a></li>
@@ -214,7 +214,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
 
                 <!-- About Section -->
-                <div class="col-10 col-lg-3 mx-auto text-center text-lg-start d-flex flex-column">
+                <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
                     <h3 class="fs-6 fw-bold">About</h3>
                     <ul class="list-unstyled">
                         <li><a href="about.html" class="text-white">Company</a></li>
@@ -224,7 +224,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
 
                 <!-- Contact Us Section -->
-                <div class="col-10 col-lg-3 mx-auto text-center text-lg-start d-flex flex-column">
+                <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
                     <h3 class="fs-6 fw-bold">Contact Us</h3>
                     <ul class="list-unstyled">
                         <li><a href="contacts.html" class="text-white">Book an Estimate</a></li>
@@ -232,7 +232,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
 
                 <!-- Brand Section -->
-                <div class="col-10 col-lg-3 mx-auto text-center text-lg-start d-flex flex-column align-items-center order-first align-items-lg-start order-lg-last">
+                <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column align-items-center order-first align-items-lg-start order-lg-last">
                     <div class="fw-bold d-flex align-items-center mb-2">
                         <span class="bs-icon-sm bs-icon-circle bs-icon-primary d-flex justify-content-center align-items-center me-2">
                             <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-bezier">
