padding and margins

--- a/generlink.html
+++ b/generlink.html
@@ -175,7 +175,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
             <div class="col">
                 <div class="card text-white bg-primary border-0">
-                    <div style="padding-right: 20px;" class="card-body p-4">
+                    <div style="margin-left: 20px;" class="card-body p-4">
                         <div class="d-flex justify-content-between">
                             <div>
                                 <h3 class="fw-bold text-white mb-0">Be Prepared for Every Power Outage</h3>
@@ -196,7 +196,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
     </div>
   
- <footer class="bg-dark text-white" style="font-family: Inter, sans-serif; width: 100%; padding: 30px; margin: 0;">
+ <footer class="bg-dark text-white" style="font-family: Inter, sans-serif; width: 100%; padding: 30px; margin: 20px;">
     <div class="row g-0 justify-content-center">
         <!-- Services Section -->
         <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
