--- a/generlink.html
+++ b/generlink.html
@@ -137,7 +137,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
     <div class="container py-4 py-xl-5" style="margin-top: -46px;">
         <div class="row gy-4 gx-md-0 gy-md-0 row-cols-1 row-cols-md-2 row-cols-xl-3 d-md-flex d-xl-flex align-items-md-center">
-            <div class="col offset-xl-2">
+            <div style="margin-right: 20px" class="col offset-xl-2">
                 <div class="card bg-body-tertiary border-0">
                     <div class="card-body p-4">
                         <div class="d-flex justify-content-between">
