inspection_panellabel.html

--- a/services.html
+++ b/services.html
@@ -195,7 +195,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <div class="col-12">
                             <p class="product-description">Take the guesswork out of your electrical system with our meticulous home inspection and panel labelling. Have us assess your property, identify any issues and expertly label your electrical panel, ensuring your home is powered securely. </p>
                             <div class="row">
-                                <div class="col-6"><a href="contacts.html"><button class="btn btn-light" type="button">Learn More</button></a></div>
+                                <div class="col-6"><a href="inspection_panellabel.html"><button class="btn btn-light" type="button">Learn More</button></a></div>
                             </div>
                         </div>
                     </div>
