--- a/inspection_panellabel.html
+++ b/inspection_panellabel.html
@@ -102,7 +102,7 @@
                     <p class="fw-bold text-primary">$500 – Flat Rate, No Hidden Fees!</p>
                 </div>
                 <div class="col-md-6 text-center">
-                    <img src="assets/img/technician-inspecting-panel.jpg" alt="Electrical Panel" class="img-fluid rounded shadow">
+                    <img src="assets/img/panellabel.jpeg" alt="Electrical Panel" class="img-fluid rounded shadow">
                 </div>
             </div>
         </div>
