--- a/inspection_panellabel.html
+++ b/inspection_panellabel.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <style>
         .hero {
-            background: url('assets/img/electrical-panel-background.jpg') center/cover no-repeat;
+            background: url('assets/img/panellabel.jpeg') center/cover no-repeat;
             color: white;
             padding: 4rem 2rem;
         }
