--- a/inspection_panellabel.html
+++ b/inspection_panellabel.html
@@ -33,7 +33,7 @@
         }
 
         .cta-section {
-            background: url('assets/img/home-family.jpg') center/cover no-repeat;
+            background: url('assets/img/panellabel.jpeg') center/cover no-repeat;
             color: white;
             padding: 4rem 2rem;
         }
