--- a/inspection_panellabel.html
+++ b/inspection_panellabel.html
@@ -27,13 +27,13 @@
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <style>
         .hero {
-            background: url('assets/img/panellabel.jpeg') center/cover no-repeat;
+            background: url('assets/img/home') center/cover no-repeat;
             color: white;
             padding: 4rem 2rem;
         }
 
         .cta-section {
-            background: url('assets/img/panellabel.jpeg') center/cover no-repeat;
+            background: url('assets/img/home') center/cover no-repeat;
             color: white;
             padding: 4rem 2rem;
         }
