--- a/inspection_panellabel.html
+++ b/inspection_panellabel.html
@@ -89,24 +89,24 @@
 
     <!-- Service Details Section -->
     <section class="py-5">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-md-6">
-                    <h2 class="fw-bold">Why Choose Home Inspection & Panel Labelling?</h2>
-                    <p>Your electrical system is the backbone of your home. Our professional service ensures that your system is safe, efficient, and well-organized. No more guesswork – just peace of mind.</p>
-                    <ul class="list-unstyled">
-                        <li><i class="bi bi-check-circle-fill text-primary"></i> Thorough home inspection</li>
-                        <li><i class="bi bi-check-circle-fill text-primary"></i> Expert issue identification</li>
-                        <li><i class="bi bi-check-circle-fill text-primary"></i> Precise panel labelling</li>
-                    </ul>
-                    <p class="fw-bold text-primary">$500 – Flat Rate, No Hidden Fees!</p>
-                </div>
-                <div class="col-md-6 text-center">
-                    <img src="assets/img/panellabel.jpeg" alt="Electrical Panel" class="img-fluid rounded shadow">
-                </div>
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-md-6">
+                <h2 class="fw-bold">Why Choose Home Inspection & Panel Labelling?</h2>
+                <p style="font-size: 1.25rem;">Your electrical system is the backbone of your home. Our professional service ensures that your system is safe, efficient, and well-organized. No more guesswork – just peace of mind.</p>
+                <ul class="list-unstyled" style="font-size: 1.2rem; margin-top: 1rem;">
+                    <li><i class="bi bi-check-circle-fill text-primary"></i> Thorough home inspection</li>
+                    <li><i class="bi bi-check-circle-fill text-primary"></i> Expert issue identification</li>
+                    <li><i class="bi bi-check-circle-fill text-primary"></i> Precise panel labelling</li>
+                </ul>
+                <p class="fw-bold text-primary mt-4" style="font-size: 2rem;">$500 – Flat Rate, No Hidden Fees!</p>
+            </div>
+            <div class="col-md-6 text-center">
+                <img src="assets/img/panellabel.jpeg" alt="Electrical Panel" class="img-fluid rounded shadow">
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- Call to Action Section -->
     <section class="cta-section text-center">
