--- a/inspection_panellabel.html
+++ b/inspection_panellabel.html
@@ -93,11 +93,13 @@
         <div class="row align-items-center">
             <div class="col-md-6">
                 <h2 class="fw-bold">Why Choose Home Inspection & Panel Labelling?</h2>
-                <p style="font-size: 1.25rem;">Your electrical system is the backbone of your home. Our professional service ensures that your system is safe, efficient, and well-organized. No more guesswork – just peace of mind.</p>
-                <ul class="list-unstyled" style="font-size: 1.2rem; margin-top: 1rem;">
-                    <li><i class="bi bi-check-circle-fill text-primary"></i> Thorough home inspection</li>
-                    <li><i class="bi bi-check-circle-fill text-primary"></i> Expert issue identification</li>
-                    <li><i class="bi bi-check-circle-fill text-primary"></i> Precise panel labelling</li>
+                <p style="font-size: 1.25rem; margin-top: 1rem;">
+                    Your electrical system is the backbone of your home. Our professional service ensures that your system is safe, efficient, and well-organized. No more guesswork – just peace of mind.
+                </p>
+                <ul style="font-size: 1.2rem; margin-top: 1rem; list-style-type: disc; padding-left: 1.5rem;">
+                    <li>Thorough home inspection</li>
+                    <li>Expert issue identification</li>
+                    <li>Precise panel labelling</li>
                 </ul>
                 <p class="fw-bold text-primary mt-4" style="font-size: 2rem;">$500 – Flat Rate, No Hidden Fees!</p>
             </div>
