--- a/inspection_panellabel.html
+++ b/inspection_panellabel.html
@@ -119,40 +119,63 @@
         </div>
     </section>
 
-    <!-- Footer -->
-    <footer class="bg-dark text-white py-4">
-        <div class="container">
-            <div class="row">
-                <!-- Services -->
-                <div class="col-sm-4">
-                    <h5 class="fw-bold">Services</h5>
-                    <ul class="list-unstyled">
-                        <li><a href="panelupgrade.html" class="text-white">Panel Upgrades</a></li>
-                        <li><a href="services.html" class="text-white">Surge Protection</a></li>
-                        <li><a href="electricalrepairs.html" class="text-white">Electrical Repair</a></li>
-                        <li><a href="homeautomation.html" class="text-white">Home Automation</a></li>
-                    </ul>
-                </div>
-                <!-- About -->
-                <div class="col-sm-4">
-                    <h5 class="fw-bold">About</h5>
-                    <ul class="list-unstyled">
-                        <li><a href="about.html" class="text-white">Company</a></li>
-                        <li><a href="gallery.html" class="text-white">Gallery</a></li>
-                    </ul>
-                </div>
-                <!-- Contact -->
-                <div class="col-sm-4">
-                    <h5 class="fw-bold">Contact Us</h5>
-                    <ul class="list-unstyled">
-                        <li><a href="contacts.html" class="text-white">Book an Estimate</a></li>
-                    </ul>
-                </div>
-            </div>
-            <hr class="border-secondary">
-            <p class="text-center mb-0">© 2023 Leonard Electric. Turning Power into Perfection.</p>
+   <footer class="bg-dark text-white" style="font-family: Inter, sans-serif; width: 100%; padding: 30px; margin: 20px;">
+    <div class="row g-0 justify-content-center">
+        <!-- Services Section -->
+        <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
+            <h3 class="fs-6 fw-bold">Services</h3>
+            <ul class="list-unstyled">
+                <li><a href="panelupgrade.html" class="text-white">Panel Upgrades</a></li>
+                <li><a href="services.html" class="text-white">Surge Protection</a></li>
+                <li><a href="electricalrepairs.html" class="text-white">Electrical Repair</a></li>
+                <li><a href="homeautomation.html" class="text-white">Home Automation</a></li>
+                <li><a href="ev.html" class="text-white">Car Charger</a></li>
+                <li><a href="hottubs.html" class="text-white">Hot Tubs</a></li>
+                <li><a href="hottubs.html" class="text-white">Pool Installation</a></li>
+                <li><a href="services.html" class="text-white">Home Inspection</a></li>
+                <li><a href="services.html" class="text-white">Panel Labelling</a></li>
+            </ul>
         </div>
-    </footer>
+
+        <!-- About Section -->
+        <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
+            <h3 class="fs-6 fw-bold">About</h3>
+            <ul class="list-unstyled">
+                <li><a href="about.html" class="text-white">Company</a></li>
+                <li><a href="gallery.html" class="text-white">Gallery</a></li>
+                <li><a href="https://esasafe.com" class="text-white">Licensed &amp; Insured</a></li>
+            </ul>
+        </div>
+
+        <!-- Contact Us Section -->
+        <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
+            <h3 class="fs-6 fw-bold">Contact Us</h3>
+            <ul class="list-unstyled">
+                <li><a href="contacts.html" class="text-white">Book an Estimate</a></li>
+            </ul>
+        </div>
+
+        <!-- Brand Section -->
+        <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column align-items-center order-first align-items-lg-start order-lg-last">
+            <div class="fw-bold d-flex align-items-center mb-2">
+                <span class="bs-icon-sm bs-icon-circle bs-icon-primary d-flex justify-content-center align-items-center me-2">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-bezier">
+                        <path fill-rule="evenodd" d="M0 10.5A1.5 1.5 0 0 1 1.5 9h1A1.5 1.5 0 0 1 4 10.5v1A1.5 1.5 0 0 1 2.5 13h-1A1.5 1.5 0 0 1 0 11.5v-1zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1zm10.5.5A1.5 1.5 0 0 1 13.5 9h1a1.5 1.5 0 0 1 1.5 1.5v1a.5.5 0 0 1-1.5 1.5h-1a1.5 1.5 0 0 1-1.5-1.5v-1zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1zM6 4.5A1.5 1.5 0 0 1 7.5 3h1A1.5 1.5 0 0 1 10 4.5v1A1.5 1.5 0 0 1 8.5 7h-1A1.5 1.5 0 0 1 6 5.5v-1zM7.5 4a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1z"></path>
+                        <path d="M6 4.5H1.866a1 1 0 1 0 0 1h2.668A6.517 6.517 0 0 0 1.814 9H2.5c.123 0 .244.015.358.043a5.517 5.517 0 0 1 3.185-3.185A1.503 1.503 0 0 1 6 5.5v-1zm3.957 1.358A1.5 1.5 0 0 0 10 5.5v-1h4.134a1 1 0 1 1 0 1h-2.668a6.517 6.517 0 0 1 2.72 3.5H13.5c-.123 0-.243.015-.358.043a5.517 5.517 0 0 0-3.185-3.185z"></path>
+                    </svg>
+                </span>
+                <a href="index.html" class="text-white"><span>Leonard Electric</span></a>
+            </div>
+            <p class="text-muted" style="font-size: 13px;">Turning Power into Perfection.</p>
+        </div>
+    </div>
+
+    <!-- Footer Bottom Line -->
+    <hr class="border-secondary">
+    <div class="text-muted d-flex justify-content-between align-items-center pt-3">
+        <p class="mb-0">Copyright © 2023 Leonard Electric</p>
+    </div>
+</footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
