inspection_panellabel.html link

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="col mb-4">
                         <div class="card shadow-sm">
                             <div class="card-body px-4 py-5 px-md-5" style="height: 117px;">
-                                <div class="bs-icon-lg d-flex justify-content-center align-items-center mb-3 bs-icon" style="top: 1rem;right: 1rem;position: absolute;"></div><a href="services.html">
+                                <div class="bs-icon-lg d-flex justify-content-center align-items-center mb-3 bs-icon" style="top: 1rem;right: 1rem;position: absolute;"></div><a href="inspection_panellabel.html">
                                     <h5 class="fw-bold" style="text-align: left;margin-top: -22px;"><strong>Panel Labelling</strong></h5>
                                 </a>
                             </div>
