--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="col mb-5" style="text-align: center;">
                     <div class="card shadow-sm" style="text-align: center;">
                         <div class="card-body px-4 py-5 px-md-5" style="text-align: center;height: 117px;">
-                            <div class="bs-icon-lg d-flex justify-content-center align-items-center mb-3 bs-icon" style="top: 1rem;right: 1rem;position: absolute;text-align: center;"></div><a href="services.html">
+                            <div class="bs-icon-lg d-flex justify-content-center align-items-center mb-3 bs-icon" style="top: 1rem;right: 1rem;position: absolute;text-align: center;"></div><a href="generlink.html">
                                 <h5 class="fw-bold" style="text-align: left;">Stand-By Generators</h5>
                             </a>
                         </div>
