home inspection changed to electrical inspection

--- a/services.html
+++ b/services.html
@@ -188,12 +188,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                     <div class="row">
                         <div class="col-8" style="width: 100%;">
-                            <p style="color: var(--bs-emphasis-color);font-weight: bold;font-size: 25px;text-align: center;">Home Inspection &amp; Panel Labelling</p>
+                            <p style="color: var(--bs-emphasis-color);font-weight: bold;font-size: 25px;text-align: center;">Electrical Inspection &amp; Panel Labelling</p>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-12">
-                            <p class="product-description">Take the guesswork out of your electrical system with our meticulous home inspection and panel labelling. Have us assess your property, identify any issues and expertly label your electrical panel, ensuring your home is powered securely. </p>
+                            <p class="product-description">Take the guesswork out of your electrical system with our meticulous electrical inspection and panel labelling. Have us assess your property, identify any issues and expertly label your electrical panel, ensuring your home is powered securely. </p>
                             <div class="row">
                                 <div class="col-6"><a href="inspection_panellabel.html"><button class="btn btn-light" type="button">Learn More</button></a></div>
                             </div>
@@ -298,7 +298,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <li></li>
                         <li></li>
                         <li><a href="hottubs.html">Hot Tubs, Sauna &amp;</a><a href="hottubs.html" style="padding-left: 0px;margin-left: 5px;">Pool Installation</a></li>
-                        <li><a href="services.html">Home Inspection</a><a href="Home Inspection.html" style="margin-left: 14px;">Panel Labelling</a></li>
+                        <li><a href="services.html">Electrical Inspection</a><a href="Home Inspection.html" style="margin-left: 14px;">Panel Labelling</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
