change home inspection to electrical inspection

--- a/inspection_panellabel.html
+++ b/inspection_panellabel.html
@@ -22,8 +22,8 @@
     </script>
     <!-- End Google Tag Manager -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home Inspection & Panel Labelling</title>
-    <meta name="description" content="Professional Home Inspection & Panel Labelling services for only $500. Secure your home today!">
+    <title> Electrical Inspection & Panel Labelling</title>
+    <meta name="description" content="Professional Electrical Inspection & Panel Labelling services for only $500. Secure your home today!">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <style>
         .hero {
@@ -82,8 +82,8 @@
     <header class="hero text-center">
         <div class="container overlay">
             <h1 class="display-4">Ensure Your Home's Electrical Safety</h1>
-            <p class="lead">Professional Home Inspection & Panel Labelling – only $500</p>
-            <a href="contacts.html" class="btn btn-primary btn-lg">Schedule Your Home Inspection</a>
+            <p class="lead">Professional Electrical Inspection & Panel Labelling – only $500</p>
+            <a href="contacts.html" class="btn btn-primary btn-lg">Schedule Your Electrical Inspection</a>
         </div>
     </header>
 
@@ -92,12 +92,12 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col-md-6">
-                <h2 class="fw-bold">Why Choose Home Inspection & Panel Labelling?</h2>
+                <h2 class="fw-bold">Why Choose Electrical Inspection & Panel Labelling?</h2>
                 <p style="font-size: 1.25rem; margin-top: 1rem;">
                     Your electrical system is the backbone of your home. Our professional service ensures that your system is safe, efficient, and well-organized. No more guesswork – just peace of mind.
                 </p>
                 <ul style="font-size: 1.2rem; margin-top: 1rem; list-style-type: disc; padding-left: 1.5rem;">
-                    <li>Thorough home inspection</li>
+                    <li>Thorough electrical inspection</li>
                     <li>Expert issue identification</li>
                     <li>Precise panel labelling</li>
                 </ul>
@@ -132,7 +132,7 @@
                 <li><a href="ev.html" class="text-white">Car Charger</a></li>
                 <li><a href="hottubs.html" class="text-white">Hot Tubs</a></li>
                 <li><a href="hottubs.html" class="text-white">Pool Installation</a></li>
-                <li><a href="services.html" class="text-white">Home Inspection</a></li>
+                <li><a href="services.html" class="text-white">Electrical Inspection</a></li>
                 <li><a href="services.html" class="text-white">Panel Labelling</a></li>
             </ul>
         </div>
