--- a/Lighting.html
+++ b/Lighting.html
@@ -7,17 +7,33 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="header">
-        <h1>Interior and Exterior Lighting Services</h1>
-        <p>Brighten Your Home, Illuminate Your Outdoors</p>
+    <!-- Header -->
+    <header>
+        <div class="container">
+            <a href="index.html"><img src="assets/logo.png" alt="Leonard Electric Logo" class="logo"></a>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
+    <!-- Main Content -->
     <main>
-        <!-- Smart Lighting Section -->
-        <section class="section">
+        <div class="hero">
+            <h1>Interior & Exterior Lighting Services</h1>
+            <p>Brighten Your Home, Illuminate Your Outdoors</p>
+        </div>
+
+        <!-- Smart Interior Lighting -->
+        <section>
             <h2>Smart Interior Lighting Solutions</h2>
-            <img src="assets/Living_Room_Lighting.jpg" alt="Living Room with Smart Lighting">
-            <p>Transform your home with smart lighting solutions:</p>
+            <img src="assets/living-room-lighting.jpg" alt="Living Room with Smart Lighting">
+            <p>Transform your home with cutting-edge lighting solutions:</p>
             <ul>
                 <li>Lights turn on/off automatically while you’re on vacation.</li>
                 <li>Set schedules to match your routine.</li>
@@ -25,41 +41,40 @@
                 <li>Adjust lighting to follow natural circadian rhythms for better wellness.</li>
                 <li>Control lighting in every room with an app or voice command.</li>
             </ul>
-            <img src="assets/Smartphone_Light.jpg" alt="Person controlling lights with smartphone">
         </section>
 
         <!-- Interior Lighting Installations -->
-        <section class="section">
+        <section>
             <h2>Professional Interior Lighting Installations</h2>
-            <p>We specialize in five types of interior lighting installations:</p>
+            <p>We specialize in five types of lighting installations:</p>
             <div class="image-grid">
                 <figure>
-                    <img src="assets/kitchen_lighting.jpg" alt="Kitchen with track lighting">
+                    <img src="assets/kitchen-track-lighting.jpg" alt="Kitchen with track lighting">
                     <figcaption>Track Lighting</figcaption>
                 </figure>
                 <figure>
-                    <img src="assets/Living_Room_Lighting.jpg" alt="Living Room with recessed lights">
+                    <img src="assets/recessed-ceiling-lights.jpg" alt="Living Room with recessed lights">
                     <figcaption>Recessed Ceiling Lights</figcaption>
                 </figure>
                 <figure>
-                    <img src="assets/cozy_lighting" alt="Reading nook with downlights">
+                    <img src="assets/reading-nook-downlights.jpg" alt="Reading nook with downlights">
                     <figcaption>Downlights</figcaption>
                 </figure>
                 <figure>
-                    <img src="assets/bedroom_lighting.jpg" alt="Bedroom with swag lighting">
+                    <img src="assets/bedroom-swag-lighting.jpg" alt="Bedroom with swag lighting">
                     <figcaption>Swag Lighting</figcaption>
                 </figure>
                 <figure>
-                    <img src="assets/Chandelier_light" alt="Dining room with chandelier">
+                    <img src="assets/chandelier-dining.jpg" alt="Dining room with chandelier">
                     <figcaption>Chandeliers ($269 Install)</figcaption>
                 </figure>
             </div>
         </section>
 
         <!-- Exterior Lighting -->
-        <section class="section">
+        <section>
             <h2>Exterior Lighting Services</h2>
-            <img src="assets/Exterior_Lighting.jpg" alt="House exterior with lighting">
+            <img src="assets/house-exterior-lighting.jpg" alt="House exterior with lighting">
             <p>Enhance safety and beauty with professional exterior lighting:</p>
             <ul>
                 <li>Automated schedules to match seasons and time changes.</li>
@@ -71,9 +86,9 @@
         </section>
 
         <!-- Holiday Lighting -->
-        <section class="section">
+        <section>
             <h2>Holiday & Seasonal Lighting Installation</h2>
-            <img src="assets/Xmas_lighting.jpg" alt="Festive home with Christmas lights">
+            <img src="assets/holiday-lights.jpg" alt="Festive home with Christmas lights">
             <p>Make your holidays magical and stress-free with professionally installed holiday lighting:</p>
             <ul>
                 <li>Custom designs for a festive look.</li>
@@ -82,20 +97,8 @@
             </ul>
         </section>
 
-        <!-- Motion Sensor Lighting -->
-        <section class="section">
-            <h2>Motion Sensor Lighting</h2>
-            <img src="assets/motion_activated_lighting.jpg" alt="Bathroom with motion sensor lighting">
-            <p>Never stumble in the dark again. Our motion sensor lighting provides:</p>
-            <ul>
-                <li>Ambient, low-color LED lighting for nighttime convenience.</li>
-                <li>Lights that activate automatically as you enter the room.</li>
-                <li>A modern, sleek solution for hallways, bathrooms, and kitchens.</li>
-            </ul>
-        </section>
-
         <!-- Why Choose Leonard Electric -->
-        <section class="section why-leonard">
+        <section>
             <h2>Why Choose Leonard Electric?</h2>
             <p>Here’s why we’re the trusted choice for all your lighting needs:</p>
             <ul>
@@ -107,10 +110,18 @@
         </section>
     </main>
 
-    <footer class="footer">
-        <p>Contact us today to schedule your lighting installation!</p>
-        <button>Call Now</button>
-        <button>Request a Quote</button>
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 Leonard Electric. All Rights Reserved.</p>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </footer>
 </body>
 </html>
